--- a/package.json
+++ b/package.json
@@ -2,16 +2,30 @@
   "name": "SEQUELIZE-ORM",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/edwinisnow/sequelize.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/edwinisnow/sequelize/issues"
+  },
+  "homepage": "https://github.com/edwinisnow/sequelize#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql2": "^1.6.5",
+    "express-handlebars": "^3.1.0",
+    "mariadb": "^2.0.5",
     "sequelize": "^5.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
